# polars-v-pandas

./: .gitignore  README.md  pyproject.toml
src/polars_v_pandas/: __init__.py  compare.py  download_data.py  utils.py
