[build-system]
build-backend = 'hatchling.build'
requires = [ 'hatchling' ]


[dependency-groups]
dev = [
  'ruff >=0.12.4',
]


[project]
classifiers = [
  'Private :: Do Not Upload',
]
dependencies = [
  'matplotlib >=3.10.3',
  'pandas >=2.3.1',
  'polars >=1.31.0',
  'pyarrow >=21.0.0',
  'yfinance >=0.2.65',
]
description = 'Quick comparison difference between Polars and Pandas, with and without PyArrow backend'
name = 'polars-v-pandas'
readme = 'README.md'
requires-python = '>=3.13.5'
version = '0.0.1'


[project.scripts]
compare = 'polars_v_pandas.compare:main'
download = 'polars_v_pandas.download_data:main'


[tool.ruff]
indent-width = 2
line-length = 100
target-version = 'py313'


[tool.ruff.lint.per-file-ignores]
'__init__.py' = [
  'F401',  # Ignore unused imports
]
